argocd-declarative/manifests/rabbitmq-app/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
#          image: 'rabbitmq:latest'
#          image: "rabbitmq:management"
#          image: rabbitmq:3-management  # Use the image with management plugin
          image: rabbitmq:4-management  # Use the image with management plugin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          volumeMounts:
            - name: rabbitmq-vol
              mountPath: /var/lib/rabbitmq
      restartPolicy: Always
      volumes:
        - name: rabbitmq-vol
          persistentVolumeClaim:
#            claimName: rabbitmq-pvc-local
            claimName: rabbitmq-pvc-nfs-sc
