argocd-declarative/manifests/rabbitmq-app/rabbitmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      name: amqp-port
      port: 5672
      targetPort: 5672
#      nodePort: 32003
    - protocol: TCP
      name: ui-port
      port: 15672
      targetPort: 15672
#      nodePort: 32004
#  type: NodePort
  type: ClusterIP
