argocd-declarative/manifests/rabbitmq-app/rabbitmq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.int.taqniat.ae
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-svc
                port:
                  number: 15672
